// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`assignStyles 1`] = `
{
  "className": [
    "button_10z7gf1 p_30wbosl p_jz2gbp p_lvo2c0 p_2bsqz24 p_1g64ozy p4bu535j",
    "small__3f1jkpy p_lrhn32 p_17cdq7g",
    "primary_1ih230g puounk5 p26wlstb",
  ],
  "stylesheet": [
    ".p_30wbosl{font-family:Nunito Sans, Helvetica Neue, Helvetica, Arial, sans-serif;}",
    ".p_jz2gbp{font-weight:700;}",
    ".p_lvo2c0{border-radius:3em;}",
    ".p_2bsqz24{cursor:pointer;}",
    ".p_1g64ozy{display:inline-block;}",
    ".p4bu535j{line-height:1;}",
    ".p_lrhn32{font-size:12px;}",
    ".p_17cdq7g{padding:10px 16px;}",
    ".puounk5{color:white;}",
    ".p26wlstb{background-color:#1ea7fd;}",
    " :host { color: red; } ",
  ],
}
`;

exports[`assignStyles 2`] = `
{
  "className": [
    "button_10z7gf1 p_30wbosl p_jz2gbp p_lvo2c0 p_2bsqz24 p_1g64ozy p4bu535j",
    "large_1nh99gg p_lrhjq2 pgqc8fp",
    "secondary_1dc80ru pqpi8rk p21ealbq p7rxdrct",
  ],
  "stylesheet": [
    ".p_30wbosl{font-family:Nunito Sans, Helvetica Neue, Helvetica, Arial, sans-serif;}",
    ".p_jz2gbp{font-weight:700;}",
    ".p_lvo2c0{border-radius:3em;}",
    ".p_2bsqz24{cursor:pointer;}",
    ".p_1g64ozy{display:inline-block;}",
    ".p4bu535j{line-height:1;}",
    ".p_lrhjq2{font-size:16px;}",
    ".pgqc8fp{padding:12px 24px;}",
    ".pqpi8rk{color:#333;}",
    ".p21ealbq{background-color:transparent;}",
    ".p7rxdrct{box-shadow:rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;}",
    " :host { color: red; } ",
  ],
}
`;
